[tool.poetry]
name = "regtech-api-commons"
version = "0.1.0"
description = ""
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [{include = "regtech_api_commons", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.115.8", extras = ["anyio=^4.4.0"]}
requests = "^2.32.3"
python-keycloak = "^5.2.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
regtech-regex = {git = "https://github.com/cfpb/regtech-regex.git"}
pyjwt = "^2.10.1"


[tool.poetry.group.linters.dependencies]
ruff = "^0.9.4"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.25.3"


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
